# sdl2_game

./: CMakeLists.txt  README.md
cmake/modules/: FindSDL2_image.cmake
